--- a/Relocation and booking services/Views/Shared/EmailList.cshtml
+++ b/Relocation and booking services/Views/Shared/EmailList.cshtml
@@ -15,9 +15,9 @@
                 {
                     <tr name="chosenEmail" value="@mail.Id">
                         <td><object class="image/svg+xml" data="mail.svg"></object></td>
-                        <td><a role="button" class="btn-primary btn-link" onclick="submitEmailViewCommand()">@mail.Title</a></td>
+                        <td><a role="button" id="viewButton"class="btn-primary btn-link" onclick="submitView('@mail.Id')">@mail.Title</a></td>
                         <td>@mail.Body</td>
-                        <td><a role="button" onclick="submitEmailDeleteCommand()" class="btn btn-outline-danger"><object class="image/svg+xml" data="trash-2.svg" tooltip="Delete Mail">D</object></a></td>
+                        <td><a role="button" onclick="submitDelete('@mail.Id')" class="btn btn-outline-danger"><object class="image/svg+xml" data="trash-2.svg" tooltip="Delete Mail">D</object></a></td>
                     </tr>
 
                 }
@@ -28,14 +28,27 @@
 </form>
 
 <script>
-    function submitEmailDeleteCommand() {
-        var form = document.getElementById('emailListForm');
-        form.action = '/Email/DeleteEmail';
-        form.submit();
-    }
-    function submitEmailViewCommand() {
+
+    function submitView(mailId) {
         var form = document.getElementById('emailListForm');
         form.action = '/Email/ViewEmail';
+        return submitEmailCommand(mailId, form);
+    }
+    function submitDelete(mailId) {
+        var form = document.getElementById('emailListForm');
+        form.action = '/Email/DeleteEmail';
+        return submitEmailCommand(mailId, form);
+    }
+
+    function submitEmailCommand(mailId,form) {
+        if (!input) {
+            var input = document.createElement('input');
+            input.type = 'hidden';
+            input.name = 'mailId';
+            input.id = 'mailIdInput';
+        }
+        input.value = mailId;
+        form.appendChild(input);
         form.submit();
     }
 </script>
