--- a/Relocation and booking services/Views/Shared/_Layout.cshtml
+++ b/Relocation and booking services/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿<style>
     body {
-        background-image: url('bridge1.jpg');
+        background-image: url('/bridge1.jpg?v=0');
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
