--- a/Relocation and booking services/Views/_ViewImports.cshtml
+++ b/Relocation and booking services/Views/_ViewImports.cshtml
@@ -6,5 +6,6 @@
 @using Datalayer.Interfaces;
 @using Relocation_and_booking_services.Controllers;
 @using Datalayer.Models.Email;
+@using System.Text.Json;
 @namespace Relocation_and_booking_services.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
