--- a/Relocation and booking services/Views/Shared/_Layout.cshtml
+++ b/Relocation and booking services/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/javascript.js?v=1.0"></script>  @*Watch out for browser caching => kills your brain cells along with your current javascript file. Use ?v=1.0 to kill browser caching a version of your javascript*@
+    <script src="/javascript.js?v=1.0"></script>  @*Watch out for browser caching => kills your brain cells along with your current javascript file. Use ?v=1.0 to kill browser caching a version of your javascript*@
 </head>
 
 <body>
@@ -54,7 +54,7 @@
                     <a class="nav-link text-white" asp-controller="Home" asp-action="AboutUs">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-item text-white" asp-controller="User" asp-action="Emails">Emails</a>
+                    <a class="nav-item text-white" asp-controller="Email" asp-action="Emails">Emails</a>
                 </li>
                 </ul>
                 <ul class="navbar-nav" id="crucialDetails">
