--- a/Relocation and booking services/Views/Shared/_Layout.cshtml
+++ b/Relocation and booking services/Views/Shared/_Layout.cshtml
@@ -54,7 +54,10 @@
                     <a class="nav-link text-white" asp-controller="Home" asp-action="AboutUs">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-item text-white" asp-controller="Email" asp-action="Emails">Emails</a>
+                    <a class="nav-item dropdown-toggle text-white" asp-controller="Email" asp-action="Emails">Emails</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-item dropdown-toggle text-white" asp-controller="IndustryUser" asp-action="ServiceList">Your services</a>
                 </li>
                 </ul>
                 <ul class="navbar-nav" id="crucialDetails">
