Made possibility for the industry user to add,update and delete his own uploaded services, but it can only see his own services for now. I also made a profile page for all users where each user can modify their own data.

--- a/Relocation and booking services/Views/_ViewImports.cshtml
+++ b/Relocation and booking services/Views/_ViewImports.cshtml
@@ -7,5 +7,6 @@
 @using Relocation_and_booking_services.Controllers;
 @using Datalayer.Models.Email;
 @using System.Text.Json;
+@using Datalayer.Models.Enums;
 @namespace Relocation_and_booking_services.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
