--- a/Relocation and booking services/Views/Email/Email.cshtml
+++ b/Relocation and booking services/Views/Email/Email.cshtml
@@ -2,7 +2,8 @@
 
 <div class="container mt-5">
     <div class="card">
-        <div class="card-header d-flex justify-content-center"><p style="white-space:pre-wrap">@Model.Item1?.Title</p></div>
+        <div class="card-header d-flex justify-content-center">
+        </div>
         <div class="card-body">
             <h5 class="card-title white-space:pre-wrap" style="white-space:pre-wrap">@Model.Item1?.Title</h5>
             <p style="white-space:pre-wrap" class="card-text" id="emailBody">@Model.Item1?.Body</p>
@@ -24,12 +25,12 @@
                 </div>
                 <div id="forwardSection" class="d-none">
                     <input class="form-control" id="userIds" name="ids" hidden />
-                    <input class="form-control" id="emails" placeholder="Selected Emails" readonly/>
-                    <label for="forwardCommand"class="form-label">Select people</label>
-                    <input class="form-control" list="forwardList" id="forwardCommand"placeholder="Search"/>
+                    <input class="form-control" id="emails" placeholder="Selected Emails" readonly />
+                    <label for="forwardCommand" class="form-label">Select people</label>
+                    <input class="form-control" list="forwardList" id="forwardCommand" placeholder="Search" />
                     <button class="btn btn-outline-secondary" type="button" onclick="addForward()">Add person</button>
                     <datalist id="forwardList">
-                        @foreach(User user in Model.Item2)
+                        @foreach (User user in Model.Item2)
                         {
                             <option data-id="@user.Id" value="@user.Email">@user.Email</option>
                         }
