--- a/Relocation and booking services/Views/Shared/_Layout.cshtml
+++ b/Relocation and booking services/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
         background-size: cover;
     }
 </style>
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -15,15 +15,21 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/javascript.js?v=1.0"></script>  @*Watch out for browser caching => kills your brain cells along with your current javascript file. Use ?v=1.0 to kill browser caching a version of your javascript*@
+    <script src="/javascript.js?v=1.0"></script>
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-sm bg-dark fixed-top p-0">
+<body onload="loggedUser(@ViewBag.Role)">
+    <nav class="navbar navbar-expand-sm bg-dark fixed-top p-0 d-flex justify-content-right">
         <div class="container-fluid">
-            <ul class="navbar-nav">
+            <div class="mb-3">
+                <a asp-controller="Home" asp-action="Profile">
+                    <img src="/default.jpg" id="image" width="30" height="30" />
+                </a>
+
+            </div>
+            <ul class="navbar-nav d-none" id="userDetails">
                 <li class="nav-item">
-                    <a class="nav-link text-white"asp-controller="Home" asp-action="Homepage">Homepage</a>
+                    <a class="nav-link text-white" asp-controller="Home" asp-action="Homepage">Homepage</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" asp-controller="Home" asp-action="AllBookings">
@@ -31,22 +37,22 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dropdown-toggle text-white" asp-controller="Home" asp-action="AllRentings">
+                    <a class="nav-link text-white" asp-controller="Home" asp-action="AllRentings">
                         Renting services
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dropdown-toggle text-white" asp-controller="Home" asp-action="AllJobs">
+                    <a class="nav-link text-white" asp-controller="Home" asp-action="AllJobs">
                         Job search services
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dropdown-toggle text-white" asp-controller="Home" asp-action="AllFurnitureTransports">
+                    <a class="nav-link text-white" asp-controller="Home" asp-action="AllFurnitureTransports">
                         Furniture transport services
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dropdown-toggle text-white" asp-controller="Home" asp-action="AllTransports">
+                    <a class="nav-link text-white" asp-controller="Home" asp-action="AllTransports">
                         Travel services
                     </a>
                 </li>
@@ -54,25 +60,41 @@
                     <a class="nav-link text-white" asp-controller="Home" asp-action="AboutUs">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-item dropdown-toggle text-white" asp-controller="Email" asp-action="Emails">Emails</a>
+                    <a class="nav-link text-white" asp-controller="Email" asp-action="Emails">Emails</a>
+                </li>
+                <li class="nav-item " id="relocation">
+                    <a class="nav-link text-white" asp-controller="User" asp-action="Relocation">Relocation</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-item dropdown-toggle text-white" asp-controller="IndustryUser" asp-action="ServiceList">Your services</a>
+                    <a class="nav-link text-white" asp-controller="Home" asp-action="Logout">Sign out</a>
                 </li>
-                </ul>
-                <ul class="navbar-nav" id="crucialDetails">
-                    <li class="nav-item " id="relocation">
-                        <a class="nav-link text-white" asp-controller="User" asp-action="Relocation">Relocation</a>
-                    </li>
-                    <li class="nav-item" id="loggingOption">
-                        <a class="nav-link text-white" data-bs-toggle="modal" data-bs-target="#logInModal">Log in</a>
-                    </li>
-                    <li class="nav-item" id="creatingOption">
-                        <a class="nav-link text-white" data-bs-toggle="modal" data-bs-target="#createAccountModal">Create Account</a>
-                    </li>
-                    <li class="nav-item" id="signOutOption">
-                    <a class="nav-link text-white" asp-controller="Home" asp-action="Logout" onclick="logOff()">Sign out</a>
-                    </li>
+            </ul>
+
+            <ul class="navbar-nav d-none" id="industryDetails">
+                <li class="nav-item">
+                    <a class="nav-link text-white" asp-controller="Home" asp-action="Homepage">Homepage</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" asp-controller="IndustryUser" asp-action="ServiceList">Your services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" asp-controller="Email" asp-action="Emails">Emails</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" asp-controller="Home" asp-action="AboutUs">About Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" asp-controller="Home" asp-action="Logout">Sign out</a>
+                </li>
+            </ul>
+
+            <ul class="navbar-nav d-none" id="crucialDetails">
+                <li class="nav-item" id="loggingOption">
+                    <a class="nav-link text-white" data-bs-toggle="modal" data-bs-target="#logInModal">Log in</a>
+                </li>
+                <li class="nav-item" id="creatingOption">
+                    <a class="nav-link text-white" data-bs-toggle="modal" data-bs-target="#createAccountModal">Create Account</a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -143,6 +165,19 @@
                             <div class="valid-feedback">Ok</div>
                             <div class="invalid-feedback">Company name required</div>
                         </div>
+                        <div class="mb-3">
+                            <input type="file" id="imageUpload" accept="image/*" />
+                            <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg">
+                                <defs>
+                                    <pattern id="imageFill" patternUnits="userSpaceOnUse" width="200" height="200">
+                                        <image href="/default.jpg" id="uploadedImage" x="10" y="10" width="180" height="180" />
+                                    </pattern>
+                                </defs>
+
+                                <rect x="10" y="10" width="180" height="180" fill="url(#imageFill)" stroke="black" stroke-width="5" />
+                            </svg>
+
+                        </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
                 </div>
@@ -151,12 +186,12 @@
     </div>
     @*
     <div class="card p-5" style="width: 18rem;">
-        <div class="card-body">
-        <h4 class="card-title">force reload button</h4>
-        </div>
-        <div class="card-footer">
-            <button class="btn-primary" type="button" onclick="forcedReload()">Push</button>
-        </div>
+    <div class="card-body">
+    <h4 class="card-title">force reload button</h4>
+    </div>
+    <div class="card-footer">
+    <button class="btn-primary" type="button" onclick="forcedReload()">Push</button>
+    </div>
     </div>
     *@
     <div class="container">
@@ -164,7 +199,7 @@
             @RenderBody()
         </main>
     </div>
-    
+
 
 </body>
 </html>
