Now you can upload your own profile picture, you can change it in your profile, view the person's profile picture who emailed you. Also, when you change your company name in your profile, the posted services will also have that field updated. The profile section is pretty much complete.

--- a/Relocation and booking services/Views/Email/Email.cshtml
+++ b/Relocation and booking services/Views/Email/Email.cshtml
@@ -1,8 +1,9 @@
-﻿@model (Email?,List<User>);
+﻿@model (Email?,List<User>,byte[]);
 
 <div class="container mt-5">
     <div class="card">
         <div class="card-header d-flex justify-content-center">
+            <img src="@(Model.Item3 ==null ? "/default.jpg" :"data:image/jpg;base64,"+Convert.ToBase64String(Model.Item3))" width="220" height="200" />
         </div>
         <div class="card-body">
             <h5 class="card-title white-space:pre-wrap" style="white-space:pre-wrap">@Model.Item1?.Title</h5>
