--- a/Relocation and booking services/Views/Shared/_Layout.cshtml
+++ b/Relocation and booking services/Views/Shared/_Layout.cshtml
@@ -86,6 +86,23 @@
                     <a class="nav-link text-white" asp-controller="Home" asp-action="Logout">Sign out</a>
                 </li>
             </ul>
+            <ul class="navbar-nav d-none" id="schoolUserDetails">
+                <li class="nav-item">
+                    <a class="nav-link text-white" asp-controller="Home" asp-action="Homepage">Homepage</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" asp-controller="SchoolController" asp-action="SchoolServices">Your school servicess</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" asp-controller="Email" asp-action="Emails">Emails</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" asp-controller="Home" asp-action="AboutUs">About Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" asp-controller="Home" asp-action="Logout">Sign out</a>
+                </li>
+            </ul>
 
             <ul class="navbar-nav d-none" id="crucialDetails">
                 <li class="nav-item" id="loggingOption">
