--- a/Relocation and booking services/Views/IndustryUser/PersonalServiceList.cshtml
+++ b/Relocation and booking services/Views/IndustryUser/PersonalServiceList.cshtml
@@ -8,7 +8,7 @@
         @foreach (AbstractModel? item in Model)
         {
             <div class="card">
-                <img src="@item.ImageSrc" class="card-img-top" />
+                <img src="@(item.Image !=null ? "data:image/jpg;base64,"+Convert.ToBase64String(item.Image) : item.ImageSrc)" class="card-img-top" />
                 <div class="card-body">
                     <input class="form-control" type="text" value="@item.CreatorId" name="itemCreatorId" hidden />
                     <input class="form-control" type="text" value="@item.Id" name="itemId" hidden />
@@ -24,6 +24,11 @@
                 <div class="card-footer h-stack gap-3">
                     <button class="btn btn-outline-warning" type="button" data-bs-toggle="modal" data-bs-target="#updateModal" onclick="takeIds('@item.Id','@item.CreatorId')">Update</button>
                     <button type="button" class="btn btn-outline-danger" onclick="DeleteOffer('@item.CreatorId','@item.Id')">Delete</button>
+                    <blockquote class="blockquote">
+                       Posted on: @item.Date?.ToString("dd/MM/yyyy");
+                       <br />
+                       At @item.Date?.ToString("hh/mm/ss");
+                    </blockquote>
                 </div>
             </div>
         }
@@ -37,7 +42,7 @@
                 <h4>Update Offer</h4>
             </div>
             <div class="modal-body">
-                <form method="post" asp-controller="IndustryUser" asp-action="UpdateOffer">
+                <form method="post" asp-controller="IndustryUser" asp-action="UpdateOffer" enctype="multipart/form-data">
                     <input type="text" class="form-control" name="chosenItemId" id="chosen" hidden />
                     <input type="text" class="form-control" name="currentUserId" id="user" hidden />
                     <div class="input-group">
@@ -56,14 +61,18 @@
                                 <input type="text" class="form-control" name="offerPrice" id="price" placeholder="Price" required />
                                 <label for="price" class="form-label">Price</label>
                             </div>
+                            @*
                             <div class="form-floating">
-                                <input class="form-control" type="text" name="offerLink" id="link" placeholder="Site's url" />
-                                <label class="form-label" for="link">Site's url'</label>
+                            <input class="form-control" type="text" name="offerLink" id="link" placeholder="Site's url" />
+                            <label class="form-label" for="link">Site's url'</label>
                             </div>
+                            *@
                             <div class="form-floating">
                                 <input class="form-control" type="text" name="offerLocation" id="location" placeholder="Offer's Location" required />
                                 <label for="location" class="form-label">Location</label>
                             </div>
+                            <input type="file" id="newOfferImage" accept="image/*" name="newPhoto" onchange="uploadImage('newOfferImage','offerImage')" placeholder="Upload new photo" />
+                            <img src="/default.jpg" id="offerImage" width="50" height="50" />
                         </div>
                     </div>
                     <button class="btn btn-outline-primary" type="submit">Submit</button>
@@ -88,7 +97,7 @@
 
             <div class="modal-body">
                 <div class="modal-body">
-                    <form method="post" asp-controller="IndustryUser" asp-action="AddOffer">
+                    <form method="post" asp-controller="IndustryUser" asp-action="AddOffer" enctype="multipart/form-data">
                         <div class="input-group">
                             <div class="vstack gap-3">
                                 <div class="form-floating">
@@ -105,18 +114,23 @@
                                     <input type="text" class="form-control" name="offerPrice" id="price" placeholder="Price" required />
                                     <label for="price" class="form-label">Price</label>
                                 </div>
+
                                 <div class="form-floating">
                                     <input class="form-control" type="text" name="offerLink" id="link" placeholder="Site's url" />
                                     <label class="form-label" for="link">Site's url'</label>
                                 </div>
+                                @*
                                 <div class="form-floating">
-                                    <input class="form-control" type="text" name="offerImage" id="image" placeholder="The Image" />
-                                    <label class="form-label" for="image">Offer's product image'</label>
+                                <input class="form-control" type="text" name="offerImage" id="image" placeholder="The Image" />
+                                <label class="form-label" for="image">Offer's product image'</label>
                                 </div>
+                                *@
                                 <div class="form-floating">
                                     <input class="form-control" type="text" name="offerLocation" id="location" placeholder="Offer's Location" required />
                                     <label for="location" class="form-label">Location</label>
                                 </div>
+                                <input type="file" id="newerOfferImage" accept="image/*" name="newPhoto" onchange="uploadImage('newerOfferImage','offeredImage')" placeholder="Upload new photo" />
+                                <img src="/default.jpg" id="offeredImage" width="50" height="50" />
                             </div>
                         </div>
                         <button class="btn btn-outline-primary" type="submit">Submit</button>
