--- a/Relocation and booking services/Views/Shared/AllTransports.cshtml
+++ b/Relocation and booking services/Views/Shared/AllTransports.cshtml
@@ -5,7 +5,7 @@
         @foreach (Transport ap in Model)
         {
             <div class="card">
-                <img src="@ap.ImageSrc" class="card-img-top" />
+                <img src="@(ap.Image!=null ? "data:image/jpg;base64,"+Convert.ToBase64String(ap.Image): ap.ImageSrc)" class="card-img-top" />
                 <div class="card-body">
                     <h4 class="card-title">@ap.Name</h4>
                     <input class="form-control" type="text" value="@ap.CreatorId" name="transportCreatorId" hidden />
