--- a/Relocation and booking services/Views/_ViewImports.cshtml
+++ b/Relocation and booking services/Views/_ViewImports.cshtml
@@ -8,5 +8,6 @@
 @using Datalayer.Models.Email;
 @using System.Text.Json;
 @using Datalayer.Models.Enums;
+@using Datalayer.Models.SchoolItem;
 @namespace Relocation_and_booking_services.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
