--- a/Relocation and booking services/Views/Shared/RentingServices.cshtml
+++ b/Relocation and booking services/Views/Shared/RentingServices.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Vehicle>
 
-<form asp-controller="User" asp-action="Renting">
+<form id="rentingForm" asp-controller="User" asp-action="Renting">
     <div class="card-group w-50 h-50 p-5">
         @foreach (Vehicle ap in Model)
         {
@@ -18,7 +18,7 @@
                     </div>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-primary" type="submit">Reserve</button>
+                    <button class="btn btn-primary" type="button" onclick="MakeInputCommand('@ap.Id',document.getElementById('rentingForm'),'@ap.CreatorId')">Reserve</button>
                 </div>
             </div>
         }
